# bazel-sandbox

./: BUILD  MODULE.bazel  README.md  WORKSPACE  main.py
.github/workflows/: build_bazel.yml
